Fixed social links alignment, updated audio src URLs

--- a/src/sass/sections/_contact-section.scss
+++ b/src/sass/sections/_contact-section.scss
@@ -33,8 +33,8 @@
     outline: none;
     transition: all 150ms ease;
     border-width: 2px;
+    border-color: black;
     background: none;
-    
   }
 
   :not(:last-child) {
